Added more granular authorization uris. Also, removed  api_web on frontend endpoint calls.